--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -88,3 +88,7 @@
     		border-top:1px solid grey;
     		border-bottom:1px solid grey;
     	}
+		
+		.x-list-container{
+    		background-color:white;
+    	}
