--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -99,3 +99,11 @@
 		.x-scroll-container {
 background-color: white;
 }
+
+.topButton{
+-webkit-mask-image:url('resources/images/star.png'); 
+}
+
+.setButton{
+-webkit-mask-image:url('resources/images/setting.png'); 
+}
