--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -103,7 +103,7 @@ background-color: white;
 .topButton{
 -webkit-mask-image:url('/resources/images/star.png'); 
 }
-
+*/
 .setButton{
 -webkit-mask-image:url('/resources/images/setting.png'); 
-}*/
+}
