--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -88,7 +88,9 @@
     		border-top:1px solid grey;
     		border-bottom:1px solid grey;
     	}
-		
+		.x-list {
+    		background-color:lightgray;
+    	}*
 	/*	.x-list-container{
     		background-color:white;
     	}
