--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -90,10 +90,11 @@
     	}
 		.x-list {
     		background-color:lightgray;
-    	}*
-	/*	.x-list-container{
+    	}
+		.x-list-container{
     		background-color:white;
     	}
+	/*	
 		.x-list .x-list-item{
     		background-color:lightgray;
     	}*/
